# Flasche

./: Dockerfile  README.md  app.py  pyproject.toml
database/: meta.csv  nouns.csv  verbs.csv  vocabulary.csv
flasche/: __init__.py  config.py  conjugations.py  grammer_tables.py
flasche/blueprints/: home.py  insertion.py  metrics.py  quiz.py  vocabulary.py
flasche/db/: data.py  insertion.py  manager.py
flasche/templates/: home.html  metrics.html  vocabulary.html
flasche/templates/insert/: insertion.html  noun.html  verb.html  vocab.html
flasche/templates/quiz/: question.html  results.html  setup.html
